<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_d435</name>
  <version>0.0.1</version>
  <description>The crane_x7_d435 package</description>
  <maintainer email="kuwamai.beetle@gmail.com">kuwamai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
